resources/styles/forms.less
.mw-special-FormStart {
  input[name='page_name'] {
    font-size: 22px;
    line-height: 22px;
    padding: 5px;
  }
}

.editOptions {
  font-size: 12px;
  color: #7a7a7a;
}

.editButtons {
  margin-top: 10px;
}

.hw-form-semantics {
  overflow: hidden;
  .hw-form-semantics-section {
    margin: 2px;
    padding: 0;
    font-weight: normal;
    color: #999;
    font-size: 18px;
  }
  .mw-collapsible-toggle {
    float: left;
    margin: 10px 10px 10px 0;
    a {
      .hwbutton();
      .hwbutton-secondary();
      .hwbutton-small();
    }
    .mw-collapsible-bracket {
      display: none;
    }
    &.mw-collapsible-toggle-expanded,
    &.mw-collapsible-toggle-collapsed {
      text-decoration: none;
    }
  }
}

.hw-form-location {
  float: right;
  width: 400px;
}

.mw-ui-input {
  padding: 3px;
  font-size: 15px;
  line-height: 15px;
}

